--- a/views/users.ejs
+++ b/views/users.ejs
@@ -41,8 +41,8 @@
                 <div class="panel-footer clearfix">
                     <% if(post.img) { %>
                     <% post.img.forEach(function (img) { %>
-                    <a target="_blank" data-lightbox="roadtrip<%= post._id %>" href="<%= img %>"><img
-                                style="width: 50px;height: 50px" src="<%= img %>"></a>
+                    <a target="_blank" data-lightbox="roadtrip<%= post._id %>" href="<%= img.sourceImg %>"><img
+                                style="width: 50px;height: 50px" src="<%= img.thumbnailImg %>"></a>
                     <% }) %>
                     <% } %>
                     <form action="/remove" target="_blank" method="post" style="display: inline">
