--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
         <% if(posts) %>
         <% posts.forEach(function (post, index) { %>
         <div class="panel  panel-default col-md-12 col-sm-12 table-bordered"
-             style="padding:10px 0px 0px 0px;margin-bottom: 30px;max-height: 200px;overflow: hidden">
+             style="padding:10px 0px 0px 0px;margin-bottom: 30px;overflow: hidden">
 
             <div class="panel-heading"><a class="h3 panel-title " href="/users/p/<%= post._id %>"><%= post.title %></a>
 
@@ -39,9 +39,30 @@
                 <% if(post.img) { %>
                 <% post.img.forEach(function (img) { %>
                 <a target="_blank" data-lightbox="roadtrip<%= post._id %>" href=<%= img.sourceImg %>><img
-                            style="width: 50px;height: 50px" src=<%= img.thumbnailImg %>></a>
+                            style="width:80px;height: 120px" src=<%= img.thumbnailImg %>></a>
                 <% }) %>
                 <% } %>
+
+                <div class="btn-group pull-right ">
+                    <% var flag = 1 %>
+                    <% if (user && (user.name != post.name)) { %>
+                    <% if ((post.reprint_info.reprint_from != undefined) && (user.name == post.reprint_info.reprint_from.name)) { %>
+                    <% flag = 0 %>
+                    <% } %>
+                    <% if ((post.reprint_info.reprint_to != undefined)) { %>
+                    <% post.reprint_info.reprint_to.forEach(function (reprint_to, index) { %>
+                    <% if (user.name == reprint_to.name) { %>
+                    <% flag = 0 %>
+                    <% } %>
+                    <% }) %>
+                    <% } %>
+                    <% } else { %>
+                    <% flag = 0 %>
+                    <% } %>
+                    <% if (flag) { %>
+                    <a class="edit btn btn-primary btn-sm" href="/reprint/<%= post._id %>">转载</a>
+                    <% } %>
+                </div>
             </div>
         </div>
         <% }) %>
