--- a/views/login.ejs
+++ b/views/login.ejs
@@ -10,18 +10,21 @@
 </head>
 <body style="background: url('/images/lg_bg.jpg' ) no-repeat; ">
 <div class="container">
-<% include prompt.ejs%>
+    <% include prompt.ejs %>
     <form style="width: 350px;padding: 20px 50px;position: absolute; top: 170px;"
           class="login_form form-horizontal  table-bordered btn btn-default pull-left" role="form" method="post">
         <div class="form-group btn-lg text-center">用户登录</div>
         <div class="form-group">
 
-            <div class="input-group "><span class="input-group-addon">用户名</span><input class="form-control" id="username"
-                                                                                      type="text" name="username"></div>
+            <div class="input-group "><span class="input-group-addon">用户名</span><input class="form-control"
+                                                                                       id="username"
+                                                                                       type="text" name="username">
+            </div>
         </div>
         <div class="form-group">
 
-            <div class="input-group"><span class="input-group-addon">密&nbsp&nbsp&nbsp&nbsp码</span><input class="form-control" type="password" id="password" name="password"></div>
+            <div class="input-group"><span class="input-group-addon">密&nbsp&nbsp&nbsp&nbsp码</span><input
+                        class="form-control" type="password" id="password" name="password"></div>
         </div>
 
         <div style="width: 200px;height: 40px" class="center-block ">
