--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -6,8 +6,8 @@ ul, li, form, label, table, tr, td, th {
     margin: 0;
     border: 0;
     font-weight: normal;
-    font-size: 12px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-size: 14px;
+    font-family: 微软雅黑;
     color: #000;
 }
 
@@ -39,6 +39,38 @@ a {
     text-decoration: none;
 }
 
+/**
+通用
+**/
+
+.body_background {
+    background: #73CFF1 url('/images/index_bg.jpg') center top no-repeat;
+}
+
+.content_item {
+    margin-bottom: 30px;
+    overflow: hidden;
+}
+
+.content_info {
+    margin-left: 20px;
+    display: inline-block;
+}
+.content_img {
+    width: 80px;
+    height: 120px;
+
+}
+.content_text{
+    margin-bottom: 10px;
+}
+.bold {
+    font-weight: bold;
+}
+
+/**
+顶部栏
+**/
 #top {
     background-color: black;
     height: 80px;
@@ -65,13 +97,115 @@ a {
     font-family: "΢微软雅黑";
 }
 
-#content {
-    height: 800px;
+.top_search_nav {
+    padding: 0px 100px;
+    border-radius: 0px;
 }
+
+.top_icon {
+    margin: 4px 60px 0px 130px;
+
+}
+
+.search_input {
+    width: 500px;
+}
+
+.top_nav_right {
+    margin-left: 100px;
+}
+
+.line {
+    border-left: solid 1px black;
+    padding-left: 20px;
+}
+
+/**
+发表框
+**/
+.post_btn {
+}
+#post_content{
+  height: 100px;
+}
+.img_btn {
+    position: relative;
+    margin-left: 5px;
+    margin-top: 10px;
+    font-size: 15px;
+
+}
+
+.imguploadcontainer {
+    position: relative;
+}
+
+.img_btn span {
+    font-size: 15px;
+}
+
+#imgupload {
+    display: none;
+    border-radius: 5px;
+    top: 50px;
+    border: 1px solid black;
+    background-color: white;
+    width: 455px;
+    position: absolute;
+}
+.input_number{
+    height: 30px;
+    line-height: 30px;
+    margin-right: 10px;
+}
+/**
+登录页面
+**/
+
+.login_background {
+    background: url('/images/lg_bg.jpg') no-repeat;
+}
+
+.login_form {
+    width: 350px;
+    padding: 20px 50px;
+    position: absolute;
+    top: 170px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 5px 5px 0px 0px #73CFF1;
+}
+
+.login_buttons {
+    width: 200px;
+    height: 40px
+}
+
+/**
+注册页面
+**/
+.reg_form {
+    position: absolute;
+    top: 170px;
+    width: 350px;
+    padding: 20px 50px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 5px 5px 0px 0px #73CFF1;
+}
+
+/**
+主页
+**/
+
+
+/**
+用户页
+**/
 
 #user_left {
     background-color: white;
-    border-radius:5px 0 0 5px;
+    border-radius: 5px 0 0 5px;
 }
 
 .user_left_content {
@@ -80,42 +214,46 @@ a {
     overflow: hidden
 }
 
-#user_right{
+#user_right {
     background-color: #73CFF1;
-    border-radius:0 5px 5px 0;
+    border-radius: 0 5px 5px 0;
     padding: 0px;
 }
-.user_head_portrait img{
+
+.user_head_portrait img {
     width: 100px;
     height: 100px;
     margin: 10px;
     border-radius: 10px;
 }
-.user_message{
-  background-color:   #89B4CA;
+
+.user_message {
+    background-color: #89B4CA;
     height: 50px;
 }
-.user_message li{
+
+.user_message li {
     display: inline-block;
     width: 32%;
     height: 50px;
 
-
 }
-.user_message a{
+
+.user_message a {
     display: inline-block;
     text-align: center;
     width: 100%;
     margin: 8px 0;
-    border-left: solid 1px rgba(0,0,0,0.2);
+    border-left: solid 1px rgba(0, 0, 0, 0.2);
 }
-.user_message  li:first-child a{
+
+.user_message li:first-child a {
     border-left: none;
 }
-.user_message li a span{
+
+.user_message li a span {
     color: #006a92;
     padding: 0 0;
     display: block;
-
 
 }
