--- a/views/article.ejs
+++ b/views/article.ejs
@@ -16,25 +16,30 @@
     </script>
 </head>
 <body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
-<% include top %>
+<% include model/top.ejs %>
 <div class="container">
 
-    <% include prompt.ejs %>
+    <% include model/prompt.ejs %>
 
     <div class="panel panel-default">
-        <div class="panel-heading"><span class="panel-title h3 label label-primary"><%= post.title %></span>
-           <span class="label label-info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
-            日期：<%= post.time.minute %>|
-            点击量：<%= post.pv ? post.pv : "0" %>|
-            转载：
-               <% if (post.reprint_info.reprint_to) { %>
-               <%= post.reprint_info.reprint_to.length %>
-               <% } else { %>
-               <%= 0 %>
-               <% } %>
-           </span>
+        <div class="panel-heading"><a class="h3 panel-title " href="/users/p/<%= post._id %>"><%= post.title %></a>
+            <div class="content_info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
+                日期：<%= post.time.minute %> |
+                点击量：<%= post.pv ? post.pv : "0" %> | 转载：
+                <% if (post.reprint_info.reprint_to) { %>
+                <%= post.reprint_info.reprint_to.length %>
+                <% } else { %>
+                <%= 0 %>
+                <% } %>
+            </div>
         </div>
-        <div class="panel-body" style="margin-bottom: 20px;"><p><%- post.post %></p></div>
+        <div class="panel-body"><div class="content_text"><%- post.post %></div>
+            <% if(post.img) { %>
+            <% post.img.forEach(function (img) { %>
+            <a target="_blank" data-lightbox="roadtrip<%= post._id %>" href=<%= img.sourceImg %>><img
+                        class="content_img" src=<%= img.thumbnailImg %>></a>
+            <% }) %>
+            <% } %></div>
         <div class="panel-footer clearfix">
 
             <form action="/remove" target="_blank" method="post">
@@ -69,8 +74,8 @@
 
         </div>
     </div>
-    <%- include comment %>
-    <% include bottom %>
+    <%- include model/comment.ejs %>
+    <% include model/bottom.ejs %>
 </div>
 </body>
 </html>
