--- a/views/index.ejs
+++ b/views/index.ejs
@@ -10,21 +10,20 @@
     <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
     <script src="/js/dropzone.js"></script>
+    <script src="/js/myjs/myjs.js"></script>
+    <script src="/js/lightbox.min.js" defer></script>
 </head>
-<body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
-<% include top %>
+<body class="body_background" >
+<% include model/top.ejs %>
 
 <div class="container">
-    <% include prompt.ejs %>
+    <% include model/prompt.ejs %>
     <div class="row">
         <% if(posts) %>
-        <% posts.forEach(function (post, index) { %>
-        <div class="panel  panel-default col-md-12 col-sm-12 table-bordered"
-             style="padding:10px 0px 0px 0px;margin-bottom: 30px;overflow: hidden">
-
+        <% posts.forEach(function (post) { %>
+        <div class="panel  panel-default col-md-12 col-sm-12 table-bordered content_item">
             <div class="panel-heading"><a class="h3 panel-title " href="/users/p/<%= post._id %>"><%= post.title %></a>
-
-                <div class="label label-info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
+                <div class="content_info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a> |
                     日期：<%= post.time.minute %> |
                     点击量：<%= post.pv ? post.pv : "0" %> | 转载：
                     <% if (post.reprint_info.reprint_to) { %>
@@ -34,14 +33,15 @@
                     <% } %>
                 </div>
             </div>
-            <div class="panel-body"><%- post.post %></div>
-            <div class="panel-footer clearfix">
+            <div class="panel-body"><div class="content_text"><%- post.post %></div>
                 <% if(post.img) { %>
                 <% post.img.forEach(function (img) { %>
                 <a target="_blank" data-lightbox="roadtrip<%= post._id %>" href=<%= img.sourceImg %>><img
-                            style="width:80px;height: 120px" src=<%= img.thumbnailImg %>></a>
+                            class="content_img" src=<%= img.thumbnailImg %>></a>
                 <% }) %>
-                <% } %>
+                <% } %></div>
+            <div class="panel-footer clearfix">
+
 
                 <div class="btn-group pull-right ">
                     <% var flag = 1 %>
@@ -50,7 +50,7 @@
                     <% flag = 0 %>
                     <% } %>
                     <% if ((post.reprint_info.reprint_to != undefined)) { %>
-                    <% post.reprint_info.reprint_to.forEach(function (reprint_to, index) { %>
+                    <% post.reprint_info.reprint_to.forEach(function (reprint_to) { %>
                     <% if (user.name == reprint_to.name) { %>
                     <% flag = 0 %>
                     <% } %>
@@ -67,16 +67,10 @@
         </div>
         <% }) %>
     </div>
-    <% include pageing %>
-    <% include bottom %>
+    <% include model/pageing.ejs %>
+    <% include model/bottom.ejs %>
 </div>
-<script src="/js/lightbox.min.js"></script>
-<script>
-    lightbox.option({
-        'resizeDuration': 200,
-        'wrapAround': true
-    })
-</script>
+
 </body>
 </html>
 
