--- a/views/search.ejs
+++ b/views/search.ejs
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
     <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
+    <script src="/js/dropzone.js"></script>
+    <script src="/js/myjs/myjs.js"></script>
+    <script src="/js/lightbox.min.js" defer></script>
 </head>
-<body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
-<%include top.ejs %>
+<body class="body_background">
+<%include model/top.ejs %>
 <div class="container">
-    <% include prompt.ejs%>
+    <% include model/prompt.ejs%>
     <div class="row">
         <% if(posts) %>
         <% posts.forEach(function (post, index) { %>
         <div class="panel  panel-default col-md-12 col-sm-12 table-bordered" style="padding:10px 0px 0px 0px;margin-bottom: 30px;max-height: 200px;overflow: hidden">
             <div class="panel-heading"><a class="h3 panel-title " href="/users/p/<%= post._id %>"><%= post.title %></a>
-                <div class="label label-info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a>  |
+                <div class="content_info">作者：<a href="/users/<%= post.name %>"><%= post.name %></a>  |
                     日期：<%= post.time.minute %>
                 </div>
             </div>
