--- a/views/users.ejs
+++ b/views/users.ejs
@@ -10,12 +10,13 @@
     <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
     <script src="/js/dropzone.js"></script>
+    <script src="/js/myjs/myjs.js"></script>
+    <script src="/js/lightbox.min.js" defer></script>
 </head>
-<body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
-<% include top.ejs %>
+<body class="body_background">
+<% include model/top.ejs %>
 <div class="container">
-
-    <% include prompt.ejs %>
+    <% include model/prompt.ejs %>
     <div class="row">
         <div id="user_left" class="col-md-8 col-sm-8">
             <% if(posts) %>
@@ -25,7 +26,7 @@
                 <div class="panel-heading clearfix"><a class="h3 panel-title pull-left "
                                                        href="/users/p/<%= post._id %>"><%= post.title %></a>
 
-                    <div class="pull-left" style="margin-left: 20px">作者：<a
+                    <div class="pull-left content_info">作者：<a
                                 href="/users/<%= post.name %>"><%= post.name %></a> |
                         日期：<%= post.time.minute %> |
                         点击量：<%= post.pv ? post.pv : "0" %> | 转载：
@@ -41,7 +42,7 @@
                     <% if(post.img) { %>
                     <% post.img.forEach(function (img) { %>
                     <a target="_blank" data-lightbox="roadtrip<%= post._id %>" href="<%= img.sourceImg %>"><img
-                                style="width: 80px;height: 120px" src="<%= img.thumbnailImg %>"></a>
+                                class="content_img" src="<%= img.thumbnailImg %>"></a>
                     <% }) %>
                     <% } %>
                     <form action="/remove" target="_blank" method="post" style="display: inline">
@@ -77,7 +78,7 @@
                 </div>
             </div>
             <% }) %>
-            <% include pageing %>
+            <% include model/pageing.ejs %>
         </div>
         <div id="user_right" class="col-md-4 col-sm-4 clearfix">
             <div id="user_info">
@@ -111,15 +112,8 @@
     </div>
 </div>
 
-<% include bottom %>
+<% include model/bottom.ejs %>
 
-<script src="/js/lightbox.min.js"></script>
-<script>
-    lightbox.option({
-        'resizeDuration': 200,
-        'wrapAround': true
-    })
-</script>
 </body>
 </html>
 
