--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,7 +14,7 @@
     <script src="/js/lightbox.min.js" defer></script>
     <script charset="utf-8" src="/js/angular.min.js"></script>
 </head>
-<body class="body_background" >
+<body class="body_background" ng-app="">
 <% include model/top.ejs %>
 
 <div class="container">
