--- a/views/article.ejs
+++ b/views/article.ejs
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
+    <link href="/stylesheets/lightbox.css" rel="stylesheet">
     <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
     <script src="/js/jquery-2.1.4.min.js"></script>
     <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
+    <script src="/js/dropzone.js"></script>
+    <script src="/js/lightbox.min.js" defer></script>
+    <script src="/js/myjs/myjs.js"></script>
+    <script charset="utf-8" src="/js/angular.min.js"></script>
     <script>
         function delcfm() {
             if (!confirm("确认要删除？")) {
@@ -15,7 +20,7 @@
         }
     </script>
 </head>
-<body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
+<body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; " ng-app="">
 <% include model/updateModel.ejs %>
 <% include model/top.ejs %>
 <div class="container">
