--- a/views/model/top.ejs
+++ b/views/model/top.ejs
@@ -10,7 +10,8 @@
         </div>
 
     </form>
-    <ul class="nav navbar-nav pull-left top_nav_right">
+    <div class="top_nav_right pull-right">
+    <ul class=" nav navbar-nav  ">
 
         <li id="index"><a href="/"><span class="glyphicon glyphicon-home"></span> 首页</a></li>
         <% if(user){ %>
@@ -39,6 +40,7 @@
             $('#' + '<%=type%>').addClass('active');
         </script>
     </ul>
+    </div>
 </nav>
 <% include postModel.ejs%>
 
