--- a/views/users.ejs
+++ b/views/users.ejs
@@ -1,19 +1,21 @@
 <!DOCTYPE html>
-<html>
+<html ng-app="">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= title %></title>
-    <link href="/stylesheets/lightbox.css" rel="stylesheet">
     <link rel='stylesheet' href='/stylesheets/style.css'/>
-    <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
-    <script src="/js/jquery-2.1.4.min.js"></script>
-    <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
-    <script src="/js/dropzone.js"></script>
+    <link rel="stylesheet" href="/bower_components/lightbox2/dist/css/lightbox.css" >
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/bower_components/dropzone/dist/min/dropzone.min.js"></script>
+    <script src="/bower_components/lightbox2/dist/js/lightbox.min.js" defer></script>
+    <script  src="/bower_components/angular/angular.min.js"></script>
     <script src="/js/myjs/myjs.js"></script>
-    <script src="/js/lightbox.min.js" defer></script>
 </head>
 <body class="body_background">
+
 <% include model/top.ejs %>
 <div class="container">
     <% include model/prompt.ejs %>
@@ -37,22 +39,27 @@
                         <% } %>
                     </div>
                 </div>
-                <div class="panel-body"><%- post.post %></div>
-                <div class="panel-footer clearfix">
+                <div class="panel-body">
+                    <div class="content_text"><%- post.post %></div>
                     <% if(post.img) { %>
                     <% post.img.forEach(function (img) { %>
-                    <a target="_blank" data-lightbox="roadtrip<%= post._id %>" href="<%= img.sourceImg %>"><img
-                                class="content_img" src="<%= img.thumbnailImg %>"></a>
+                    <a target="_blank" data-lightbox="roadtrip<%= post._id %>" href=<%= img.sourceImg %>><img
+                                class="content_img" src=<%= img.thumbnailImg %>></a>
                     <% }) %>
                     <% } %>
-                    <form action="/remove" target="_blank" method="post" style="display: inline">
+                </div>
+                <div class="panel-footer clearfix">
+                    <% if (user && (user.name == post.name)) { %>
+                    <form action="/content/<%= post._id %>" style="display: inline" method="post">
                         <div class="btn-group pull-right ">
-                            <% if (user && (user.name == post.name)) { %>
-                            <a class="edit btn btn-primary btn-sm" href="/edit/<%= post._id %>">编辑</a>
-                            <input type="hidden" name="id" value="<%= post._id %>">
-                            <input class=" btn btn-primary btn-sm" name="" type="submit" value="删除" onClick="delcfm()">
-
-                            <% } %>
+                            <a class="edit btn btn-primary btn-sm" href="#" data-toggle="modal"
+                               data-target="#updateModal">编辑</a>
+                            <input value="delete" type="hidden" name="_method">
+                            <input class=" btn btn-primary btn-sm" type="submit" value="删除">
+                        </div>
+                    </form>
+                    <% include model/updateModel.ejs %>
+                    <% } %>
                             <% var flag = 1 %>
                             <% if (user && (user.name != post.name)) { %>
                             <% if ((post.reprint_info.reprint_from != undefined) && (user.name == post.reprint_info.reprint_from.name)) { %>
@@ -70,10 +77,7 @@
                             <% } %>
                             <% if (flag) { %>
                             <a class="edit btn btn-primary btn-sm" href="/reprint/<%= post._id %>">转载</a>
-                            <% } %>
-                        </div>
-                    </form>
-
+                                <% } %>
 
                 </div>
             </div>
