--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -98,23 +98,23 @@ a {
 }
 
 .top_search_nav {
-    padding: 0px 80px;
     border-radius: 0px;
 }
 
 .top_icon {
-
+    margin: 4px 60px 0px 130px;
 
 }
 
 .search_input {
-    width: 700px;
-    margin-left: 70px;
-    margin-right: 0px;
+    width: 500px;
 }
 
 .top_nav_right {
-
+    display: inline-block;
+    margin-right: 100px;
+    width: 340px;
+    height: 50px;
 }
 
 .line {
@@ -160,26 +160,6 @@ a {
     line-height: 30px;
     margin-right: 10px;
 }
-/**
-翻页
-**/
-.pagenow{
-position: relative;
-}
-.page_input::-webkit-inner-spin-button {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-}
-.page_input {
-    border-radius: 13px;
-    position: absolute;
-    width: 20px;
-    left:10px;
-    top: -3px;
-    height: 25px;
-}
-
 /**
 登录页面
 **/
