--- a/views/article.ejs
+++ b/views/article.ejs
@@ -21,7 +21,7 @@
         }
     </script>
 </head>
-<body style="background: #73CFF1 url('/images/index_bg.jpg' ) center top no-repeat; ">
+<body class="body_background">
 <% include model/updateModel.ejs %>
 <% include model/top.ejs %>
 <div class="container">
