--- a/views/users.ejs
+++ b/views/users.ejs
@@ -26,7 +26,7 @@
             <div class="panel  panel-default col-md-12 col-sm-12 table-bordered user_left_content">
 
                 <div class="panel-heading clearfix"><a class="h3 panel-title pull-left "
-                                                       href="/users/p/<%= post._id %>"><%= post.title %></a>
+                                                       href="/content/<%= post._id %>"><%= post.title %></a>
 
                     <div class="pull-left content_info">作者：<a
                                 href="/users/<%= post.name %>"><%= post.name %></a> |
