--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html ng-app="">
+<html ng-app="myApp">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,7 +11,7 @@
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/bower_components/dropzone/dist/min/dropzone.min.js"></script>
     <script src="/bower_components/lightbox2/dist/js/lightbox.min.js" defer></script>
-    <script  src="/bower_components/angular/angular.min.js"></script>
+    <script  src="/bower_components/angular/angular.js"></script>
     <script src="/js/myjs/myjs.js"></script>
 </head>
 <body class="body_background" >
@@ -71,7 +71,9 @@
     <% include model/pageing.ejs %>
     <% include model/bottom.ejs %>
 </div>
+<script>
 
+</script>
 </body>
 </html>
 
