--- a/views/model/pageing.ejs
+++ b/views/model/pageing.ejs
@@ -1,15 +1,17 @@
-
-<div class="pager">
+<div class="pager"  ng-controller="pageCtrl">
 
     <% if (!isFirstPage) { %>
-    <li class="prepage"><a title="上一页" href="?p=<%= page-1 %>">上一页</a></li>
+    <li class="prepage"><a title="上一页" href="?p=<%= page - 1 %>">上一页</a></li>
     <% } %>
-
-
 
     <% if (!isLastPage) { %>
-    <li class="nextpage"><a title="下一页" href="?p=<%= page+1 %>">下一页</a></li>
+    <li class="nextpage"><a title="下一页" href="?p=<%= page + 1 %>">下一页</a></li>
     <% } %>
-    <li class="pagenow"><a><input  type="number" class="page_input" ng-model="page" value="<%=page%>">&nbsp&nbsp&nbsp&nbsp/<%= total %>页</a></li>
+    <li class="pagenow"><a><input class="page_input" ng-model="page">&nbsp&nbsp&nbsp&nbsp/<%= total %>页</a></li>
     <li class="pagego"><a title="下一页" href="?p={{page}}">跳转</a></li>
 </div>
+<script>
+    angular.module("myApp",[]).controller("pageCtrl", function ($scope) {
+        $scope.page="<%= page%>";
+    });
+</script>
