--- a/views/model/postModel.ejs
+++ b/views/model/postModel.ejs
@@ -28,7 +28,7 @@
                         <div class="input-group "><span class="input-group-addon">内容</span><textarea
                                     class="form-control"
                                     id="post_content"
-                                    type="text" name="content" ng-model="content" placeholder="请输入内容…"
+                                    type="text" name="content"  placeholder="请输入内容…"
                                     maxlength="130"></textarea>
                         </div>
                     </div>
