--- a/views/model/pageing.ejs
+++ b/views/model/pageing.ejs
@@ -1,4 +1,4 @@
-<div class="pager"  ng-controller="pageCtrl">
+<div  class="pager"  ng-controller="pageCtrl">
 
     <% if (!isFirstPage) { %>
     <li class="prepage"><a title="上一页" href="?p=<%= page - 1 %>">上一页</a></li>
@@ -7,11 +7,14 @@
     <% if (!isLastPage) { %>
     <li class="nextpage"><a title="下一页" href="?p=<%= page + 1 %>">下一页</a></li>
     <% } %>
-    <li class="pagenow"><a><input class="page_input" ng-model="page">&nbsp&nbsp&nbsp&nbsp/<%= total %>页</a></li>
+    <li class="pagenow"><a><input size="1" class="page_input" ng-model="page">/<%= total %>页</a></li>
     <li class="pagego"><a title="下一页" href="?p={{page}}">跳转</a></li>
 </div>
 <script>
     angular.module("myApp",[]).controller("pageCtrl", function ($scope) {
         $scope.page="<%= page%>";
+        $scope.$watch("page", function (newVal) {
+            $scope.page = (newVal+"").replace(/[^\d]/g,"");
+        });
     });
 </script>
