--- a/views/search.ejs
+++ b/views/search.ejs
@@ -2,14 +2,17 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title><%=title%></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title><%= title %></title>
+    <link rel="stylesheet" href="/bower_components/lightbox2/dist/css/lightbox.css" >
+    <link rel="stylesheet" href="/bower_components/bootstrap/dist/css/bootstrap.min.css"/>
     <link rel='stylesheet' href='/stylesheets/style.css'/>
-    <link rel="stylesheet" href="/js/bootstrap3/css/bootstrap.min.css"/>
-    <script src="/js/jquery-2.1.4.min.js"></script>
-    <script src="/js/bootstrap3/js/bootstrap.min.js"></script>
-    <script src="/js/dropzone.js"></script>
+    <script src="/bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="/bower_components/dropzone/dist/min/dropzone.min.js"></script>
+    <script src="/bower_components/lightbox2/dist/js/lightbox.min.js" defer></script>
+    <script  src="/bower_components/angular/angular.js"></script>
     <script src="/js/myjs/myjs.js"></script>
-    <script src="/js/lightbox.min.js" defer></script>
 </head>
 <body class="body_background">
 <%include model/top.ejs %>
