--- a/views/model/updateModel.ejs
+++ b/views/model/updateModel.ejs
@@ -24,7 +24,8 @@
                                                                                                   placeholder="请输入标题…"
                                                                                                   maxlength="15"
                                                                                                   disabled="disabled"
-                                                                                                  value="<%= post.title %>">
+                                                                                                  value="<%= post.title %>"
+                                                                                                  >
                         </div>
                     </div>
                     <div class="form-group">
@@ -32,7 +33,7 @@
                                     class="form-control"
                                     id="post_content"
                                     type="text" name="content"  placeholder="请输入内容…"
-                                    maxlength="130"></textarea>
+                                    maxlength="130" ng-model="content"></textarea>
                         </div>
                     </div>
 
@@ -40,7 +41,7 @@
 
                         <input type="submit" class="btn btn-primary btn-sm post_btn" value="发表">
                     </div>
-                    <div class="input_number pull-right">还能输入{{130-update_form.content.$viewValue.length}}个字</div>
+                    <div class="input_number pull-right">还能输入{{130-content.length}}个字</div>
                 </div>
             </form>
         </div>
