--- a/views/model/updateModel.ejs
+++ b/views/model/updateModel.ejs
@@ -1,4 +1,4 @@
-<div class="modal fade" id="updateModal" tabindex="-1" role="dialog"
+<div class="modal fade" id="<%= post._id %>" tabindex="-1" role="dialog"
      aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop="false">
     <div class="modal-dialog">
         <div class="modal-content">
