--- a/views/users.ejs
+++ b/views/users.ejs
@@ -53,12 +53,12 @@
                     <form action="/content/<%= post._id %>" style="display: inline" method="post">
                         <div class="btn-group pull-right ">
                             <a class="edit btn btn-primary btn-sm" href="#" data-toggle="modal"
-                               data-target="#updateModal">编辑</a>
+                               data-target="#<%= post._id %>">编辑</a>
+                            <% include model/updateModel.ejs %>
                             <input value="delete" type="hidden" name="_method">
                             <input class=" btn btn-primary btn-sm" type="submit" value="删除">
                         </div>
                     </form>
-                    <% include model/updateModel.ejs %>
                     <% } %>
                             <% var flag = 1 %>
                             <% if (user && (user.name != post.name)) { %>
