--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -11,7 +11,7 @@
     <script src="/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="/bower_components/angular/angular.js"></script>
     <script src="/bower_components/angular-route/angular-route.js"></script>
-    <script src="/js/dropzone.js"></script>
+    <script src="/bower_components/dropzone/dist/min/dropzone.min.js"></script>
     <script src="/admin/adminApp.js"></script>
     <script src="/admin/services/contentService.js"></script>
     <script src="/admin/controllers/contentsController.js"></script>
